# solana-execution-drift

client/: index.ts  package-lock.json  package.json
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs  processor.rs
