[package]
name = "execution-drift"
version = "1.0.0"
authors = ["WhoSoup <who.soup@gmail.com>"]
edition = "2018"

[dependencies]
solana-program = "1.7.12"

[features]
test-bpf = []
exclude_entrypoint = []

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
solana-validator = "1.7.11"


[lib]
crate-type = ["cdylib", "lib"]
